// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic insert, update, delete basic delete 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic delete 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic insert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete basic insert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic update 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic update 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete bulk insert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete bulk insert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete upsert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete upsert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic select table 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`missing table 1`] = `
Object {
  "body": null,
  "data": null,
  "error": Object {
    "code": "42P01",
    "details": null,
    "hint": null,
    "message": "relation \\"public.missing_table\\" does not exist",
  },
  "status": 404,
  "statusText": "Not Found",
}
`;

exports[`stored procedure 1`] = `
Object {
  "body": "ONLINE",
  "data": "ONLINE",
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`switch schema 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[20,40)",
      "data": null,
      "status": "ONLINE",
      "username": "leroyjenkins",
    },
  ],
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[20,40)",
      "data": null,
      "status": "ONLINE",
      "username": "leroyjenkins",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;
